--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,14 @@
 header {
+  display: flex;
   height: 5vh;
   background-color: blue;
+  align-items: center;
+  background-color: rgb(14, 195, 195);
+  position: sticky;
+  top: 0;
+  height: 15vh;
+  width: 100%;
+  justify-content: space-around;
 }
 
 #search-bar {
@@ -10,4 +18,6 @@ header {
 nav {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  align-self: center;
 }
