--- a/public/styles.css
+++ b/public/styles.css
@@ -19,9 +19,6 @@ p, h2, button, form, select{
   display: flex;
 }
 
-.hidden {
-  display: none;
-}
 
 #product-container {
   display: flex;
@@ -34,8 +31,6 @@ p, h2, button, form, select{
   height: 120px;
   width: auto;
 }
-
-
 
 nav {
   display: flex;
@@ -54,4 +49,8 @@ nav {
   border-radius: 10px;
   font-size: 16pt;
   margin: 1.5vh;
+}
+
+#login > p {
+  font-size: 10pt;
 }
