added search functionality, view change in search, working on filter

--- a/public/styles.css
+++ b/public/styles.css
@@ -35,7 +35,7 @@ nav {
   display: none;
 }
 
-.clothing-item {
+.product {
   background-color: #C4C4C0;
   padding: 1.5vh;
   border-radius: 10px;
